# osdev_rust

./: Cargo.toml  NOTES.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
kernel/: Cargo.toml
kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  userspace.rs  vga_buffer.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
