[package]
name = "osdev_rust"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]

[profile.dev]
panic="unwind"
debug = true
split-debuginfo = "unpacked"

[profile.release]
panic="abort"
