[package]
name = "kernel"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.12"
volatile = "0.6.1"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
font8x8 = { version = "0.2.5", default-features = false, features = ["unicode"]}

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
default-features = false
features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Implements lock-free queues. Allows push without allocation via a fixed-size buffer.
[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

# Allows for safe, one-time initialization of static variables.
[dependencies.conquer-once]
version = "0.2.0"
default-features = false

# Contains the `Stream` type.
[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
# (0x10 << 1) | 1 = 32 | 1 = 33
test-success-exit-code = 33
test-timeout = 60           # 1 minute in seconds

[[test]]
name = "should_panic"
harness = false       # disable test runner from default and custom test framework.

[[test]]
name = "stack_overflow"
harness = false
